--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,13 +15,13 @@
 		"@kobalte/core": "^0.12.3",
 		"@kobalte/tailwindcss": "^0.9.0",
 		"@lucia-auth/adapter-drizzle": "^1.0.3",
-		"@mattrax/drizzle-to-rs": "workspace:^",
-		"@mattrax/email": "workspace:^",
-		"@mattrax/mdm": "workspace:^",
-		"@mattrax/ms-graph": "workspace:^",
-		"@mattrax/policies": "workspace:^",
-		"@mattrax/policy": "workspace:^",
-		"@mattrax/ui": "workspace:^",
+		"@mattrax/drizzle-to-rs": "workspace:*",
+		"@mattrax/email": "workspace:*",
+		"@mattrax/mdm": "workspace:*",
+		"@mattrax/ms-graph": "workspace:*",
+		"@mattrax/policies": "workspace:*",
+		"@mattrax/policy": "workspace:*",
+		"@mattrax/ui": "workspace:*",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@planetscale/database": "^1.16.0",
@@ -70,7 +70,8 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss": "^3.4.1",
 		"ts-pattern": "^5.0.8",
-		"vinxi": "=0.3.4",
+		"vinxi": "^0.3.10",
+		"xml2js": "^0.6.2",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
