--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -16,7 +16,7 @@
 	"dependencies": {
 		"@kobalte/core": "^0.12.4",
 		"@kobalte/tailwindcss": "^0.9.0",
-		"@mattrax/ui": "workspace:^",
+		"@mattrax/ui": "workspace:*",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/deep": "^0.2.7",
 		"@solid-primitives/storage": "^2.1.4",
@@ -35,7 +35,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-pattern": "^5.0.8",
-		"vinxi": "=0.3.4",
+		"vinxi": "^0.3.10",
 		"vite-tsconfig-paths": "^4.3.2",
 		"xml": "^1.0.1",
 		"xml2js": "^0.6.2",
