--- a/packages/drizzle-to-rs/package.json
+++ b/packages/drizzle-to-rs/package.json
@@ -12,7 +12,7 @@
 		}
 	},
 	"dependencies": {
-		"@mattrax/ms-graph": "workspace:^",
+		"@mattrax/ms-graph": "workspace:*",
 		"drizzle-orm": "^0.30.1",
 		"plist": "^3.1.0",
 		"zod": "^3.22.4"
