--- a/packages/mdm/package.json
+++ b/packages/mdm/package.json
@@ -11,7 +11,7 @@
 		}
 	},
 	"dependencies": {
-		"@mattrax/ms-graph": "workspace:^",
+		"@mattrax/ms-graph": "workspace:*",
 		"plist": "^3.1.0",
 		"zod": "^3.22.4"
 	},
