--- a/apps/configure/package.json
+++ b/apps/configure/package.json
@@ -17,6 +17,7 @@
 		"@kobalte/core": "^0.12.4",
 		"@kobalte/tailwindcss": "^0.9.0",
 		"@mattrax/ui": "workspace:*",
+		"@planetscale/database": "^1.16.0",
 		"@solid-primitives/context": "^0.2.3",
 		"@solid-primitives/deep": "^0.2.7",
 		"@solid-primitives/storage": "^2.1.4",
@@ -30,6 +31,7 @@
 		"buffer": "^6.0.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"drizzle-orm": "^0.30.1",
 		"plist": "^3.1.0",
 		"solid-js": "^1.8.15",
 		"tailwind-merge": "^2.2.1",
