--- a/apps/mttx/Cargo.toml
+++ b/apps/mttx/Cargo.toml
@@ -7,12 +7,15 @@ publish = false
 
 [dependencies]
 mattrax-utils = { path = "../../crates/utils" }
+mattrax-policy = { path = "../../crates/policy" }
 
 clap = { version = "4.5.0", features = ["derive"] }
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
-
-graph-rs-sdk = "2.0.0-beta.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+serde_yaml = "0.9.33"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+graph-rs-sdk = "2.0.0-beta.0"
+reqwest = { version = "0.12.0", features = ["json"] }
+urlencoding = "2.1.3"
