--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
 [workspace]
 resolver = "2"
-members = [
-    "apps/mattrax",
-    "apps/mattraxd",
-    "apps/mttx",
-    "apps/configure/src-tauri",
-    "crates/*",
-]
+members = ["apps/mattrax", "apps/mattraxd", "apps/mttx", "crates/*"]
 
 [patch.crates-io]
 # TODO: This is likely a security risk, will fix it properly once the MVP is out.
