maintain back navigation

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"composite": false,
 		"jsx": "preserve",
 		"noEmit": true,
 		"jsxImportSource": "solid-js",
