--- a/crates/policy/Cargo.toml
+++ b/crates/policy/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.197", features = ["derive"] }
-specta = { version = "=2.0.0-rc.7", features = ["typescript"] }
+specta = { workspace = true, features = ["typescript"] }
