--- a/apps/mttx/Cargo.toml
+++ b/apps/mttx/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 graph-rs-sdk = "2.0.0-beta.0"
 reqwest = { version = "0.12.0", features = ["json"] }
 urlencoding = "2.1.3"
+open = "5.1.2"
