--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
 	"name": "@mattrax/monorepo",
 	"private": true,
-	"workspaces": ["apps/*", "packages/*", "apps/email/*"],
+	"workspaces": [
+		"apps/*",
+		"packages/*",
+		"apps/email/*"
+	],
 	"scripts": {
 		"dev": "pnpm --filter @mattrax/web dev",
 		"landing": "pnpm --filter @mattrax/landing --",
@@ -38,10 +42,8 @@
 		"patchedDependencies": {
 			"drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
 			"@tanstack/solid-form@0.16.0": "patches/@tanstack__solid-form@0.16.0.patch",
-			"@tanstack/solid-query@5.28.5": "patches/@tanstack__solid-query@5.28.5.patch"
-		},
-		"peerDependencyRules": {
-			"allowAny": ["@solidjs/start", "vinxi", "nitropack"]
+			"@tanstack/solid-query@5.28.5": "patches/@tanstack__solid-query@5.28.5.patch",
+			"@solidjs/router@0.13.1": "patches/@solidjs__router@0.13.1.patch"
 		}
 	}
 }
