--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,26 @@
 resolver = "2"
 members = ["apps/mattrax", "apps/mattraxd", "apps/mttx", "crates/*"]
 
+[workspace.metadata.dist]
+cargo-dist-version = "0.12.0"
+ci = ["github"]
+installers = ["shell", "powershell", "homebrew"]
+tap = "mattrax/homebrew-tap"
+targets = [
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin",
+    "x86_64-unknown-linux-gnu",
+    "x86_64-unknown-linux-musl",
+    "x86_64-pc-windows-msvc",
+]
+publish-jobs = ["homebrew"]
+pr-run-mode = "plan"
+install-updater = true
+
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
 [workspace.dependencies]
 specta = { version = "=2.0.0-rc.7" }
 
