Make `mattrax` compile

--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -20,7 +20,7 @@ tracing-subscriber = "0.3.18"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 clap = { version = "4.5.3", features = ["derive"] }
 axum = { version = "0.7.4", features = ["http2", "macros", "ws"] }
-rustls = "0.23.3"
+rustls = "=0.22.2" # TODO: Upgrade
 futures-rustls = "0.25.1"
 tower = "0.4.13"
 hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
@@ -44,6 +44,7 @@ mysql_async = { version = "0.34.1", default-features = false, features = [
     "default-rustls",
     "derive",
     "tracing",
+    "chrono",
 ] }
 mysql_common = { version = "=0.31.0", features = [
     "chrono",
