declare breadcrumbs globally

--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -20,7 +20,7 @@
 		"@kobalte/core": "^0.12.3",
 		"@mattrax/ui": "workspace:*",
 		"@solidjs/router": "^0.13.1",
-		"@solidjs/start": "^0.7.5",
+		"@solidjs/start": "1.0.0-rc.0",
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.15",
 		"vinxi": "^0.3.10",
