--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,7 +34,7 @@
 		"@solid-primitives/scheduled": "^1.4.3",
 		"@solid-primitives/storage": "^2.1.4",
 		"@solidjs/router": "^0.13.1",
-		"@solidjs/start": "^0.7.5",
+		"@solidjs/start": "1.0.0-rc.0",
 		"@t3-oss/env-core": "^0.9.2",
 		"@tanstack/query-broadcast-client-experimental": "^5.28.4",
 		"@tanstack/solid-form": "^0.16.0",
