--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -16,4 +16,5 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: docker://ghcr.io/microsoftgraph/msgraph-cli:latest
-        run: mgc --version
+        with:
+          args: --version
