--- a/.github/workflows/sst.yaml
+++ b/.github/workflows/sst.yaml
@@ -1,5 +1,5 @@
 name: SST Deploy
-on: push
+on: push # TODO: Only on prod
 
 concurrency:
   group: "merge-${{ github.ref }}"
@@ -15,11 +15,12 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v3
 
-      - name: "Az CLI login"
+      - name: Configure Azure credentials
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          allow-no-subscriptions: true
 
       - name: TODO # TODO: Remove this
         run: az ad signed-in-user show
