Install SST Ion in CI

--- a/.github/workflows/sst.yaml
+++ b/.github/workflows/sst.yaml
@@ -38,6 +38,8 @@ jobs:
         with:
           version: latest
 
+      - name: Install SST
+        run: curl -fsSL https://ion.sst.dev/install | bash
+
       - name: Deploy app
-        run: |
-          pnpm i && pnpm infra deploy --stage prod
+        run: pnpm i && pnpm infra deploy --stage prod
