--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -3,7 +3,7 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"dev": "vinxi dev --host 0.0.0.0",
+		"dev": "vinxi dev --host 0.0.0.0 --port 3001",
 		"build": "vinxi build",
 		"start": "vinxi start"
 	},
@@ -21,6 +21,7 @@
 		"@mattrax/ui": "workspace:*",
 		"@solidjs/router": "^0.13.1",
 		"@solidjs/start": "1.0.0-rc.0",
+		"@tanstack/solid-form": "^0.16.0",
 		"h3": "^1.11.1",
 		"solid-js": "^1.8.15",
 		"vinxi": "^0.3.10",
