--- a/packages/ui/ui.config.json
+++ b/packages/ui/ui.config.json
@@ -1,6 +1,6 @@
 {
 	"tsx": true,
-	"componentDir": "./src/components/ui",
+	"componentDir": "./src",
 	"tailwind": {
 		"config": "tailwind.config.cjs",
 		"css": "src/app.css"
