--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,12 +16,13 @@
 		"./css": "./src/index.css"
 	},
 	"dependencies": {
-		"@kobalte/core": "^0.12.3",
+		"@kobalte/core": "^0.12.6",
 		"@solidjs/router": "^0.13.1",
 		"@tanstack/solid-form": "^0.16.0",
 		"@tanstack/zod-form-adapter": "^0.16.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"solid-icons": "^1.1.0",
 		"solid-js": "^1.8.15",
 		"tailwind-merge": "^2.2.1",
 		"zod": "^3.22.4"
