--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
 		"@solid-primitives/memo": "^1.3.8",
 		"@solid-primitives/scheduled": "^1.4.3",
 		"@solid-primitives/storage": "^2.1.4",
+		"@solid-primitives/timer": "^1.3.9",
 		"@solidjs/router": "^0.13.1",
 		"@solidjs/start": "1.0.0-rc.0",
 		"@t3-oss/env-core": "^0.9.2",
