Admin consent loading state + `PROD_URL` -> `VITE_PROD_URL` closes #205

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # openssl rand -hex 24
 AUTH_SECRET=areallylongsecretthatyoushouldreplace
 INTERNAL_SECRET=areallylongsecretthatyoushouldreplace
-PROD_URL=http://localhost:3000
+VITE_PROD_URL=http://localhost:3000
 MDM_URL=http://localhost:8005
 EMAIL_URL=http://localhost:3002
 DATABASE_URL='mysql://todo:todo@aws.connect.psdb.cloud/todo?ssl={"rejectUnauthorized":true}'
