--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev -p 3003",
 		"build": "next build",
-		"start": "next start -p 3005"
+		"start": "next start"
 	},
 	"browserslist": "defaults, not ie <= 11",
 	"dependencies": {
@@ -38,7 +38,7 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
 		"remark-mdx": "^3.0.1",
-		"shiki": "^1.1.7",
+		"shiki": "=0.14.7",
 		"simple-functional-loader": "^1.2.1",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.4.2",
