--- a/crates/policy-win/Cargo.toml
+++ b/crates/policy-win/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "mattrax-policy-win"
+name = "mx-policy-win"
 version = "0.0.1"
 edition = "2021"
+publish = false
 
 [dependencies]
-mattrax-policy = { path = "../policy" }
+mx-policy = { path = "../policy" }
