--- a/crates/windows/Cargo.toml
+++ b/crates/windows/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0.115"
 tracing = "0.1.40"
 rustls = "0.23.4"
 x509-parser = "0.16.0"
+futures = { version = "0.3.30", no-default-features = true, features = [
+    "async-await",
+] }
