wip: Conflict resolution graph

--- a/crates/dmvalue/Cargo.toml
+++ b/crates/dmvalue/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "mx-graph"
+name = "mx-dmvalue"
 version = "0.0.1"
 edition = "2021"
 publish = false
 
 [dependencies]
-mx-dmvalue = { path = "../dmvalue" }
-
+chrono = { version = "0.4.37", features = ["serde"] }
+rust_decimal = "1.35.0"
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.115"
-
-[dev-dependencies]
-pretty_assertions = "1.4.0"
