--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -48,4 +48,4 @@ urlencoding = "2.1.3"
 hmac = "0.12.1"
 jwt = "0.16.0"
 sha2 = "0.10.8"
-x509-parser = { version = "0.16.0", features = ["verify"] }
+x509-parser = "0.16.0"
