--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,8 +37,8 @@
 		"@solidjs/start": "1.0.0-rc.0",
 		"@t3-oss/env-core": "^0.9.2",
 		"@tanstack/query-broadcast-client-experimental": "^5.28.4",
-		"@tanstack/solid-form": "^0.16.0",
-		"@tanstack/solid-query": "^5.28.5",
+		"@tanstack/solid-form": "^0.19.0",
+		"@tanstack/solid-query": "^5.30.3",
 		"@tanstack/solid-query-devtools": "^5.28.5",
 		"@tanstack/solid-query-persist-client": "^5.28.5",
 		"@tanstack/solid-table": "^8.13.2",
@@ -80,6 +80,7 @@
 		"autoprefixer": "^10.4.18",
 		"postcss": "^8.4.35",
 		"rollup-plugin-visualizer": "^5.12.0",
+		"solid-devtools": "^0.30.1",
 		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss-animate": "^1.0.7",
 		"unplugin-auto-import": "^0.17.5",
