--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-	"name": "@mattrax/monorepo",
-	"private": true,
-	"workspaces": ["apps/*", "packages/*", "apps/email/*"],
-	"scripts": {
-		"dev": "pnpm --filter @mattrax/web dev",
-		"landing": "pnpm --filter @mattrax/landing --",
-		"configure": "pnpm --filter @mattrax/configure --",
-		"email": "pnpm --filter @mattrax/email --",
-		"ingest": "pnpm --filter @mattrax/ingest --",
-		"doc": "pnpm --filter @mattrax/docs --",
-		"web": "pnpm --filter @mattrax/web --",
-		"db:push": "drizzle-kit push:mysql && bun run ./apps/web/src/db/rust.ts",
-		"db:studio": "drizzle-kit studio",
-		"db:gen": "bun run ./apps/web/src/db/rust.ts",
-		"typecheck": "tsc -b",
-		"lint": "biome lint .",
-		"format": "biome format --write ."
-	},
-	"engines": {
-		"node": ">=18"
-	},
-	"dependencies": {
-		"@biomejs/biome": "^1.6.0",
-		"@solidjs/start": "1.0.0-rc.0",
-		"dotenv": "^16.4.5",
-		"drizzle-kit": "^0.20.14",
-		"mysql2": "^3.9.2",
-		"typescript": "^5.4.2",
-		"vinxi": "^0.3.10"
-	},
-	"resolutions": {
-		"@solidjs/start": "^0.7.5",
-		"vinxi": "^0.3.10",
-		"drizzle-orm": "^0.30.1"
-	},
-	"pnpm": {
-		"patchedDependencies": {
-			"drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
-			"@tanstack/solid-form@0.16.0": "patches/@tanstack__solid-form@0.16.0.patch",
-			"@tanstack/solid-query@5.28.5": "patches/@tanstack__solid-query@5.28.5.patch",
-			"@solidjs/router@0.13.1": "patches/@solidjs__router@0.13.1.patch"
-		}
-	}
+  "name": "@mattrax/monorepo",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "apps/email/*"
+  ],
+  "scripts": {
+    "dev": "pnpm --filter @mattrax/web dev",
+    "landing": "pnpm --filter @mattrax/landing --",
+    "configure": "pnpm --filter @mattrax/configure --",
+    "email": "pnpm --filter @mattrax/email --",
+    "ingest": "pnpm --filter @mattrax/ingest --",
+    "doc": "pnpm --filter @mattrax/docs --",
+    "web": "pnpm --filter @mattrax/web --",
+    "db:push": "drizzle-kit push:mysql && bun run ./apps/web/src/db/rust.ts",
+    "db:studio": "drizzle-kit studio",
+    "db:gen": "bun run ./apps/web/src/db/rust.ts",
+    "typecheck": "tsc -b",
+    "lint": "biome lint .",
+    "format": "biome format --write ."
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "dependencies": {
+    "@biomejs/biome": "^1.6.0",
+    "@solidjs/start": "1.0.0-rc.0",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
+    "mysql2": "^3.9.2",
+    "typescript": "^5.4.2",
+    "vinxi": "^0.3.10"
+  },
+  "resolutions": {
+    "@solidjs/start": "^0.7.5",
+    "vinxi": "^0.3.10",
+    "drizzle-orm": "^0.30.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "drizzle-kit@0.20.14": "patches/drizzle-kit@0.20.14.patch",
+      "@solidjs/router@0.13.1": "patches/@solidjs__router@0.13.1.patch",
+      "@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch"
+    }
+  }
 }
