--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,8 +18,9 @@
 	"dependencies": {
 		"@kobalte/core": "^0.12.6",
 		"@solidjs/router": "^0.13.1",
+		"@tanstack/form-core": "^0.19.0",
 		"@tanstack/solid-form": "^0.19.0",
-		"@tanstack/zod-form-adapter": "^0.16.0",
+		"@tanstack/zod-form-adapter": "^0.19.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"solid-js": "^1.8.15",
