--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
 		"@tanstack/zod-form-adapter": "^0.19.0",
 		"@trpc/client": "^10.45.1",
 		"@trpc/server": "^10.45.1",
+		"@types/pluralize": "^0.0.33",
 		"aws4fetch": "^1.0.18",
 		"base58": "^2.0.1",
 		"class-variance-authority": "^0.7.0",
@@ -57,6 +58,7 @@
 		"jose": "^5.2.3",
 		"lucia": "^3.1.1",
 		"oslo": "^1.1.3",
+		"pluralize": "^8.0.0",
 		"prism-code-editor": "^3.0.1",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
