--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,95 +1,96 @@
 {
-	"name": "@mattrax/web",
-	"type": "module",
-	"private": true,
-	"scripts": {
-		"dev": "vinxi dev --host 0.0.0.0",
-		"build": "vinxi build",
-		"start": "vinxi start",
-		"stats": "pnpm build && open stats.html",
-		"vbuild": "NITRO_PRESET=vercel_edge vinxi build",
-		"cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
-	},
-	"dependencies": {
-		"@hono/zod-validator": "^0.2.0",
-		"@kobalte/core": "^0.12.3",
-		"@kobalte/tailwindcss": "^0.9.0",
-		"@lucia-auth/adapter-drizzle": "^1.0.3",
-		"@mattrax/drizzle-to-rs": "workspace:*",
-		"@mattrax/email": "workspace:*",
-		"@mattrax/ms-graph": "workspace:*",
-		"@mattrax/ui": "workspace:*",
-		"@microsoft/microsoft-graph-client": "^3.0.7",
-		"@paralleldrive/cuid2": "^2.2.2",
-		"@planetscale/database": "^1.16.0",
-		"@react-email/render": "^0.0.12",
-		"@solid-mediakit/trpc": "^3.0.2",
-		"@solid-primitives/context": "^0.2.3",
-		"@solid-primitives/date": "^2.0.21",
-		"@solid-primitives/event-bus": "^1.0.11",
-		"@solid-primitives/event-listener": "^2.3.3",
-		"@solid-primitives/lifecycle": "^0.0.102",
-		"@solid-primitives/memo": "^1.3.8",
-		"@solid-primitives/scheduled": "^1.4.3",
-		"@solid-primitives/storage": "^2.1.4",
-		"@solid-primitives/timer": "^1.3.9",
-		"@solidjs/router": "^0.13.1",
-		"@solidjs/start": "1.0.0-rc.0",
-		"@t3-oss/env-core": "^0.9.2",
-		"@tanstack/query-broadcast-client-experimental": "^5.29.0",
-		"@tanstack/solid-form": "^0.19.0",
-		"@tanstack/solid-query": "^5.30.3",
-		"@tanstack/solid-query-devtools": "^5.30.3",
-		"@tanstack/solid-query-persist-client": "^5.30.3",
-		"@tanstack/solid-table": "^8.13.2",
-		"@tanstack/zod-form-adapter": "^0.19.0",
-		"@trpc/client": "^10.45.1",
-		"@trpc/server": "^10.45.1",
-		"@types/pluralize": "^0.0.33",
-		"aws4fetch": "^1.0.18",
-		"base58": "^2.0.1",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.0",
-		"codejar": "^4.2.0",
-		"cookie-es": "^1.0.0",
-		"drizzle-orm": "^0.30.1",
-		"h3": "^1.11.1",
-		"hono": "^4.0.10",
-		"jose": "^5.2.3",
-		"lucia": "^3.1.1",
-		"oslo": "^1.1.3",
-		"pluralize": "^8.0.0",
-		"prism-code-editor": "^3.0.1",
-		"prism-themes": "^1.9.0",
-		"prismjs": "^1.29.0",
-		"react": "^18.2.0",
-		"solid-js": "^1.8.15",
-		"solid-sonner": "^0.2.5",
-		"stripe": "^14.20.0",
-		"superjson": "^2.2.1",
-		"tailwind-merge": "^2.2.1",
-		"tailwindcss": "^3.4.1",
-		"ts-pattern": "^5.0.8",
-		"vinxi": "^0.3.10",
-		"xml2js": "^0.6.2",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@iconify/json": "^2.2.190",
-		"@microsoft/microsoft-graph-types": "^2.40.0",
-		"@tailwindcss/forms": "^0.5.7",
-		"@types/prismjs": "^1.26.3",
-		"autoprefixer": "^10.4.18",
-		"postcss": "^8.4.35",
-		"rollup-plugin-visualizer": "^5.12.0",
-		"solid-devtools": "^0.30.1",
-		"tailwind-scrollbar": "^3.1.0",
-		"tailwindcss-animate": "^1.0.7",
-		"unplugin-auto-import": "^0.17.5",
-		"unplugin-icons": "^0.18.5",
-		"vite": "^5.1.5",
-		"vite-plugin-html": "^3.2.2",
-		"vite-plugin-solid": "^2.10.1",
-		"vite-tsconfig-paths": "^4.3.1"
-	}
+  "name": "@mattrax/web",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "vinxi dev --host 0.0.0.0",
+    "build": "vinxi build",
+    "start": "vinxi start",
+    "stats": "pnpm build && open stats.html",
+    "vbuild": "NITRO_PRESET=vercel_edge vinxi build",
+    "cbuild": "NITRO_PRESET=cloudflare_pages vinxi build"
+  },
+  "dependencies": {
+    "@hono/zod-validator": "^0.2.0",
+    "@kobalte/core": "^0.12.3",
+    "@kobalte/tailwindcss": "^0.9.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.3",
+    "@mattrax/drizzle-to-rs": "workspace:*",
+    "@mattrax/email": "workspace:*",
+    "@mattrax/ms-graph": "workspace:*",
+    "@mattrax/trpc-server-function": "workspace:^",
+    "@mattrax/ui": "workspace:*",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@planetscale/database": "^1.16.0",
+    "@react-email/render": "^0.0.12",
+    "@solid-mediakit/trpc": "^3.0.2",
+    "@solid-primitives/context": "^0.2.3",
+    "@solid-primitives/date": "^2.0.21",
+    "@solid-primitives/event-bus": "^1.0.11",
+    "@solid-primitives/event-listener": "^2.3.3",
+    "@solid-primitives/lifecycle": "^0.0.102",
+    "@solid-primitives/memo": "^1.3.8",
+    "@solid-primitives/scheduled": "^1.4.3",
+    "@solid-primitives/storage": "^2.1.4",
+    "@solid-primitives/timer": "^1.3.9",
+    "@solidjs/router": "^0.13.1",
+    "@solidjs/start": "1.0.0-rc.0",
+    "@t3-oss/env-core": "^0.9.2",
+    "@tanstack/query-broadcast-client-experimental": "^5.29.0",
+    "@tanstack/solid-form": "^0.19.0",
+    "@tanstack/solid-query": "^5.30.3",
+    "@tanstack/solid-query-devtools": "^5.30.3",
+    "@tanstack/solid-query-persist-client": "^5.30.3",
+    "@tanstack/solid-table": "^8.13.2",
+    "@tanstack/zod-form-adapter": "^0.19.0",
+    "@trpc/client": "^10.45.1",
+    "@trpc/server": "^10.45.1",
+    "@types/pluralize": "^0.0.33",
+    "aws4fetch": "^1.0.18",
+    "base58": "^2.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "codejar": "^4.2.0",
+    "cookie-es": "^1.0.0",
+    "drizzle-orm": "^0.30.1",
+    "h3": "^1.11.1",
+    "hono": "^4.0.10",
+    "jose": "^5.2.3",
+    "lucia": "^3.1.1",
+    "oslo": "^1.1.3",
+    "pluralize": "^8.0.0",
+    "prism-code-editor": "^3.0.1",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "solid-js": "^1.8.15",
+    "solid-sonner": "^0.2.5",
+    "stripe": "^14.20.0",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "ts-pattern": "^5.0.8",
+    "vinxi": "^0.3.10",
+    "xml2js": "^0.6.2",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@iconify/json": "^2.2.190",
+    "@microsoft/microsoft-graph-types": "^2.40.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/prismjs": "^1.26.3",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "solid-devtools": "^0.30.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-icons": "^0.18.5",
+    "vite": "^5.1.5",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-solid": "^2.10.1",
+    "vite-tsconfig-paths": "^4.3.1"
+  }
 }
