--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -86,6 +86,7 @@
     "solid-devtools": "^0.30.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "unenv": "^1.9.0",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "vite": "^5.1.5",
