--- a/.gitignore
+++ b/.gitignore
@@ -46,15 +46,6 @@ vendor/
 .DS_Store
 Thumbs.db
 
-# Temp
-result.mobileconfig
-/dominion/certs
-/dominion/*.key
-/dominion/*.crt
-/dominion/*.csr
-/dominion/*.key
-/dominion/*.pfx
-
 # Data directory
 /data
 
@@ -62,3 +53,7 @@ result.mobileconfig
 /_
 /policy.yaml
 /out
+
+# Temp
+result.mobileconfig
+/apps/ingest/src/windows.rs
