--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,6 +60,7 @@
 		"lucia": "^3.1.1",
 		"oslo": "^1.1.3",
 		"pluralize": "^8.0.0",
+		"postgres": "^3.4.4",
 		"prism-code-editor": "^3.0.1",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
