--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -11,23 +11,23 @@
 	},
 	"dependencies": {
 		"@kobalte/core": "^0.12.6",
-		"@solidjs/router": "^0.13.1",
-		"@tanstack/form-core": "^0.19.0",
-		"@tanstack/solid-form": "^0.19.0",
-		"@tanstack/zod-form-adapter": "^0.19.0",
-		"@trpc/client": "^10.45.1",
-		"@trpc/server": "^10.45.1",
+		"@solidjs/router": "^0.13.2",
+		"@tanstack/form-core": "^0.19.2",
+		"@tanstack/solid-form": "=0.19.0",
+		"@tanstack/zod-form-adapter": "^0.19.2",
+		"@trpc/client": "^10.45.2",
+		"@trpc/server": "^10.45.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
-		"solid-js": "^1.8.15",
-		"tailwind-merge": "^2.2.1",
-		"zod": "^3.22.4"
+		"solid-js": "^1.8.16",
+		"tailwind-merge": "^2.3.0",
+		"zod": "^3.22.5"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.190",
+		"@iconify/json": "^2.2.202",
 		"unplugin-auto-import": "^0.17.5",
 		"unplugin-icons": "^0.18.5",
-		"vite": "^5.1.5",
-		"vite-plugin-solid": "^2.10.1"
+		"vite": "^5.2.9",
+		"vite-plugin-solid": "^2.10.2"
 	}
 }
