--- a/package.json
+++ b/package.json
@@ -1,48 +1,44 @@
 {
-  "name": "@mattrax/monorepo",
-  "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*",
-    "apps/email/*"
-  ],
-  "scripts": {
-    "dev": "pnpm --filter @mattrax/web dev",
-    "landing": "pnpm --filter @mattrax/landing --",
-    "configure": "pnpm --filter @mattrax/configure --",
-    "email": "pnpm --filter @mattrax/email --",
-    "ingest": "pnpm --filter @mattrax/ingest --",
-    "doc": "pnpm --filter @mattrax/docs --",
-    "web": "pnpm --filter @mattrax/web --",
-    "db:push": "drizzle-kit push:pg && bun run ./apps/web/src/db/rust.ts",
-    "db:studio": "drizzle-kit studio",
-    "db:gen": "bun run ./apps/web/src/db/rust.ts",
-    "db:generate": "drizzle-kit generate:pg",
-    "typecheck": "tsc -b",
-    "lint": "biome lint .",
-    "format": "biome format --write ."
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "@biomejs/biome": "^1.7.0",
-    "@solidjs/start": "1.0.0-rc.0",
-    "dotenv": "^16.4.5",
-    "drizzle-kit": "^0.20.16",
-    "pg": "^8.11.5",
-    "typescript": "^5.4.5",
-    "vinxi": "=0.3.10"
-  },
-  "resolutions": {
-    "@solidjs/start": "^0.7.5",
-    "vinxi": "=0.3.10",
-    "drizzle-orm": "^0.30.1"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@solidjs/router@0.13.2": "patches/@solidjs__router@0.13.2.patch",
-      "@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch"
-    }
-  }
+	"name": "@mattrax/monorepo",
+	"private": true,
+	"workspaces": ["apps/*", "packages/*", "apps/email/*"],
+	"scripts": {
+		"dev": "pnpm --filter @mattrax/web dev",
+		"landing": "pnpm --filter @mattrax/landing --",
+		"configure": "pnpm --filter @mattrax/configure --",
+		"email": "pnpm --filter @mattrax/email --",
+		"ingest": "pnpm --filter @mattrax/ingest --",
+		"doc": "pnpm --filter @mattrax/docs --",
+		"web": "pnpm --filter @mattrax/web --",
+		"db:push": "drizzle-kit push:pg && bun run ./apps/web/src/db/rust.ts",
+		"db:studio": "drizzle-kit studio",
+		"db:gen": "bun run ./apps/web/src/db/rust.ts",
+		"db:generate": "drizzle-kit generate:pg",
+		"typecheck": "tsc -b",
+		"lint": "biome lint .",
+		"format": "biome format --write ."
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"dependencies": {
+		"@biomejs/biome": "^1.7.0",
+		"@solidjs/start": "1.0.0-rc.0",
+		"dotenv": "^16.4.5",
+		"drizzle-kit": "^0.20.16",
+		"pg": "^8.11.5",
+		"typescript": "^5.4.5",
+		"vinxi": "=0.3.10"
+	},
+	"resolutions": {
+		"@solidjs/start": "^0.7.5",
+		"vinxi": "=0.3.10",
+		"drizzle-orm": "^0.30.1"
+	},
+	"pnpm": {
+		"patchedDependencies": {
+			"@solidjs/router@0.13.2": "patches/@solidjs__router@0.13.2.patch",
+			"@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch"
+		}
+	}
 }
