--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 	"pnpm": {
 		"patchedDependencies": {
 			"@solidjs/router@0.13.2": "patches/@solidjs__router@0.13.2.patch",
-			"@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch"
+			"@tanstack/solid-form@0.19.0": "patches/@tanstack__solid-form@0.19.0.patch",
+			"drizzle-orm@0.30.8": "patches/drizzle-orm@0.30.8.patch"
 		}
 	}
 }
