--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,4 +25,28 @@ jobs:
       - name: Typecheck
         run: pnpm typecheck
 
+  migrations:
+    name: Migrations
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Generate migrations
+        run: pnpm db:generate
+
+      - name: Detect
+        run: |
+          if [ $(git status --porcelain | wc -l) -neq "0" ]; then
+            echo "  🔴 Detected missing migrations!"
+            exit 1
+          fi
+
   # TODO: Rust tests + Clippy (maybe in separate jobs)
