--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,13 +3,16 @@ name: Deploy
 on:
   push:
     branches: [main]
-    # paths:
-    #   - "**/*.rs"
-    #   - "**/Cargo.toml"
-    #   - "Cargo.lock"
+  pull_request:
   workflow_dispatch:
 
 jobs:
+  # TODO: Filter build to this
+  # paths:
+  #   - "**/*.rs"
+  #   - "**/Cargo.toml"
+  #   - "Cargo.lock"
+
   # build:
   #   name: Build
   #   runs-on: ubuntu-latest
@@ -17,6 +20,7 @@ jobs:
   #     - uses: actions/checkout@v3
   #     - uses: dtolnay/rust-toolchain@stable
 
+  # TODO: Connection environment & concurrency 1
   production:
     name: Production
     runs-on: ubuntu-latest
