--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
 		"@mattrax/ui": "workspace:*",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"@paralleldrive/cuid2": "^2.2.2",
+		"@planetscale/database": "^1.16.0",
 		"@react-email/render": "^0.0.12",
 		"@solid-mediakit/trpc": "^3.0.2",
 		"@solid-primitives/context": "^0.2.3",
@@ -42,7 +43,7 @@
 		"@tanstack/solid-query-devtools": "^5.30.6",
 		"@tanstack/solid-query-persist-client": "^5.30.6",
 		"@tanstack/solid-table": "^8.16.1",
-		"@tanstack/zod-form-adapter": "^0.19.2",
+		"@tanstack/zod-form-adapter": "=0.19.0",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"@types/pluralize": "^0.0.33",
@@ -59,7 +60,6 @@
 		"lucia": "^3.1.1",
 		"oslo": "^1.2.0",
 		"pluralize": "^8.0.0",
-		"postgres": "^3.4.4",
 		"prism-code-editor": "^3.3.0",
 		"prism-themes": "^1.9.0",
 		"prismjs": "^1.29.0",
@@ -81,6 +81,7 @@
 		"@tailwindcss/forms": "^0.5.7",
 		"@types/prismjs": "^1.26.3",
 		"autoprefixer": "^10.4.19",
+		"mysql2": "^3.9.7",
 		"postcss": "^8.4.38",
 		"rollup-plugin-visualizer": "^5.12.0",
 		"solid-devtools": "^0.30.1",
