--- a/packages/trpc-server-function/package.json
+++ b/packages/trpc-server-function/package.json
@@ -14,7 +14,7 @@
 		"@solidjs/router": "^0.13.2",
 		"@tanstack/form-core": "=0.19.0",
 		"@tanstack/solid-form": "=0.19.0",
-		"@tanstack/zod-form-adapter": "^0.19.2",
+		"@tanstack/zod-form-adapter": "=0.19.0",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"class-variance-authority": "^0.7.0",
