--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"prepare": "husky"
 	},
 	"engines": {
-		"node": ">=18"
+		"node": ">=18",
+		"pnpm": "^9"
 	},
 	"dependencies": {
 		"@biomejs/biome": "^1.7.0",
