--- a/apps/mattrax/Cargo.toml
+++ b/apps/mattrax/Cargo.toml
@@ -49,3 +49,4 @@ hmac = "0.12.1"
 jwt = "0.16.0"
 sha2 = "0.10.8"
 x509-parser = "0.16.0"
+mysql_async = { version = "0.34.1", default-features = false }
